# SunshineRaytracer

./: CMakeLists.txt  README.md
cmake/: CreateSourceFolders.cmake
documentation/: Doxyfile.in
src/: CMakeLists.txt  image.h  main.cpp  pathtracer.cpp  pathtracer.h  rayutil.h  renderapplication.cpp  renderapplication.h  rng.h  scene.cpp  scenegraph.cpp  scenegraph.h
src/cl/: CMakeLists.txt  clversion.h.in  commandlinehandler.cpp  commandlinehandler.h  main.cpp  renderapplication.cpp  renderapplication.h
src/cl/test/: CMakeLists.txt  test_commandlinehandler.cpp
src/engine/: CMakeLists.txt  engineversion.h.in  image.cpp  image.h  pathtracer.cpp  pathtracer.h  ray.h  rayutil.h  rng.cpp  rng.h  scene.cpp  scene.h  scenegraph.cpp  scenegraph.h  sunshineengine.cpp  sunshineengine.h
src/engine/geometry/: boundingbox.cpp  boundingbox.h  material.cpp  material.h  objfile.cpp  objfile.h  surface.cpp  surface.h  triangle.cpp  triangle.h
src/engine/image/: tgafile.cpp  tgafile.h
src/engine/include/engine/: image.h  renderer.h  sunshineengine.h
src/engine/io/: mtlgrammar.hpp  objfile.cpp  objfile.h  objgrammar.hpp  tgafile.cpp  tgafile.h
src/engine/renderer/: pathtracer.cpp  pathtracer.h  pathtracerrenderer.cpp  pathtracerrenderer.h  renderer.cpp
src/engine/scene/: bvh.cpp  bvh.h  camera.cpp  camera.h  lightsource.cpp  lightsource.h  surface.cpp  surface.h  triangle.cpp  triangle.h
src/engine/test/: CMakeLists.txt  test_material.cpp
src/io/: objfile.cpp  tgafile.h
src/scene/: bvh.cpp  camera.h  lightsource.cpp  surface.cpp  triangle.h
src/sunshine/: CMakeLists.txt  main.cpp  mainscenewidget.cpp  mainscenewidget.h  renderdialog.cpp  renderdialog.h  scenewidget.cpp  scenewidget.h  sunshinemainwindow.cpp  sunshinemainwindow.h  sunshineversion.h.in
src/sunshine/renderdialog/: generaltab.cpp  renderdialog.cpp  renderdialog.h  rendertab.cpp
src/sunshine/rendersettingsdialog/: generaltab.cpp  generaltab.h  rendersettingsdialog.cpp  rendersettingsdialog.h  rendertab.h
src/sunshine/resources/: images.qrc
src/sunshine/shaders/: fs.glsl  shaders.qrc  vs.glsl
src/sunshine/test/: CMakeLists.txt  test_dummy.cpp
test/: CMakeLists.txt
test/cl/: CMakeLists.txt  test_commandlinehandler.cpp
test/engine/: CMakeLists.txt  test_material.cpp
test/sunshine/: CMakeLists.txt  main.cpp
